Fix alignment on code blocks

--- a/_sass/mixins/_markdown-content.scss
+++ b/_sass/mixins/_markdown-content.scss
@@ -239,6 +239,7 @@
     // Block code snippets
     figure.highlight {
         position: relative;
+        text-align: left;
 
         .lineno {
             min-width: 2em;
